Alignment issues fixed.

--- a/public/global.css
+++ b/public/global.css
@@ -133,6 +133,7 @@ p {
   position: relative;
   z-index: 50;
   right: 0;
+  top: 15px;
   width: 100%;
   height: 79px;
 }
